--- a/index.html
+++ b/index.html
@@ -35,9 +35,25 @@
             <p>Information on projects.</p>
         </section>
         <section id="cv" style="display:none;">
-            <h1>Curriculum Vitae</h1>
-            <p>Detailed CV.</p>
-        </section>
+    <h1>Curriculum Vitae</h1>
+    <h2>Professional Experience</h2>
+    <ul>
+        <li><strong>Postdoctoral Researcher</strong>, Lab-STICC laboratory, IMT Atlantique, Brest, France (2023/07 – present): Learning on coded data, enhancing Deep Learning methods for compressed and coded data.</li>
+        <li><strong>Lecturer in Programming Practical Work</strong>, Université Badji Mokhtar, Annaba, Algeria (2019/10 – 2020/06).</li>
+        <li><strong>Network Administrator and Website Manager</strong>, ... (2019/01 – 2019/07).</li>
+    </ul>
+    
+    <h2>Education</h2>
+    <ul>
+        <li>Ph.D. in Computer Science, Université Badji Mokhtar, Annaba, Algeria (2019). Thesis: ...</li>
+    </ul>
+
+    <h2>Skills</h2>
+    <p>Deep Learning, Machine Learning, Data Compression, ...</p>
+
+    <!-- Additional sections like Publications and Projects can be updated similarly -->
+</section>
+
         <section id="contact" style="display:none;">
             <h1>Contact</h1>
             <p>Contact form and information.</p>
