--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section id="contact" style="display:none;">
             <h1>Contact</h1>
-            <p>Contact form and information.</p>
+            <p>Contact me at: </p>
         </section>
     </div>
 
